syntax = "proto3";
option go_package = "vitess.io/vitess/go/boost/boostpb";

package controller;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

enum FrontierStrategyType {
  NONE = 0;
  ALL_PARTIAL = 1;
  READERS = 2;
  MATCH = 3;
}

enum ReuseType {
  FINKELSTEIN = 0;
  RELAXED = 1;
  FULL = 2;
  NO_REUSE = 3;
}

message FrontierStrategy {
  FrontierStrategyType type = 1;
  string match = 2;
}

enum UpqueryMode {
  SELECT_GTID = 0;
  TRACK_GTID = 1;
};

message DomainConfig {
  int64 concurrent_replays = 1 [(gogoproto.casttype) = "int"];
  google.protobuf.Duration replay_batch_timeout = 2 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
  UpqueryMode upquery_mode = 3;
}

message Config {
  uint64 shards = 1 [(gogoproto.casttype) = "uint"];
  bool partial_enabled = 2;
  FrontierStrategy frontier_strategy = 3;
  DomainConfig domain_config = 4;
  // persistence = 5;
  google.protobuf.Duration heartbeat_every = 6 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
  google.protobuf.Duration healthcheck_every = 7 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
  uint64 quorum = 8 [(gogoproto.casttype) = "uint"];
  ReuseType reuse = 9;
  google.protobuf.Duration evict_every = 10 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
  google.protobuf.Duration worker_read_timeout = 11 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
}
